kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-api
  labels:
    app: devops-demo-api
spec:
  selector:
    app: devops-demo-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
